[package]
name = "mbe_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mbe_rust"
crate-type = ["cdylib"]

[dependencies]
blas-src = "0.9.0"
itertools = "0.10.5"
ndarray = {version ="0.15.6", features=["rayon"]}
ndarray-parallel = "0.9.1"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
ndarray-linalg = "0.14"
numpy = "0.18.0"
pyo3 = "0.18.3"
# pyo3 = "0.19.0"
rand_distr = "0.4.3"
rayon = "1.7.0"
spfunc = "0.1.0"
kiddo = "4.0.0"
