[build-system]
# requires = ["maturin>=0.15,<0.16"]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "mbe_rust"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
tests = [
    "pytest",
]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
